--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa de Satisfação - Ambiente de Trabalho</title>
+    <title>Avaliação de Riscos Psicossociais</title>
     <style>
         body {
             font-family: Arial, sans-serif;
